# SFMLnake

./: .gitignore  CMakeLists.txt  Collision.cpp  Collision.hpp  LICENSE  README.md  SFMLnake.cbp  SFMLnake.depend  SFMLnake.layout  main.cpp  score.cpp  score.hpp  version.hpp.in
dependencies/SFML/include/SFML/: Config.hpp
include/: direction.hpp  engine.hpp  field.hpp  game.hpp  gameSprites.hpp  menuButton.hpp  snake.hpp  spriteType.hpp
include/Managment/: resourceManager.hpp  sound.hpp  texture.hpp
include/States/: buttonState.hpp  gameState.hpp  stateIntroSFML.hpp  stateMainGame.hpp  stateMainMenu.hpp
sources/: Field.cpp  buttonState.hpp  color.cpp  direction.hpp  engine.cpp  engine.hpp  field.hpp  font.cpp  font.hpp  fruit.cpp  fruit.hpp  game.cpp  game.hpp  gameSprites.cpp  gameState.hpp  menuButton.cpp  menuButton.hpp  resourceManager.cpp  resourceManager.hpp  snake.cpp  snake.hpp  sound.cpp  spriteType.hpp  stateIntroSFML.cpp  stateIntroSFML.hpp  stateMainGame.cpp  stateMainGame.hpp  stateMainMenu.cpp  stateMainMenu.hpp  texture.cpp  texture.hpp
sources/engine/: audio.cpp  audio.hpp  color.cpp  color.hpp  engine.cpp  engine.hpp  game.cpp  game.hpp  resourceManager.cpp  resourceManager.hpp  sound.cpp  sound.hpp  soundManager.cpp  soundManager.hpp  texture.cpp  texture.hpp  textureManager.cpp  textureManager.hpp
sources/states/: gameState.hpp
sources/states/game/: Collision.cpp  Collision.hpp  field.cpp  field.hpp  fruit.cpp  fruit.hpp  gameSprites.cpp  gameSprites.hpp  score.cpp  score.hpp  snake.cpp  snake.hpp  stateMainGame.cpp  stateMainGame.hpp
sources/states/intro/: stateIntroSFML.cpp  stateIntroSFML.hpp
sources/states/menu/: buttonState.hpp  menuButton.cpp  menuButton.hpp  stateMainMenu.cpp  stateMainMenu.hpp
src/: Field.cpp  engine.cpp  game.cpp  gameSprites.cpp  menuButton.cpp  snake.cpp
src/Managment/: color.cpp  font.cpp  resourceManager.cpp  sound.cpp  texture.cpp
src/States/: stateIntroSFML.cpp  stateMainGame.cpp  stateMainMenu.cpp
